--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=Form, initial-scale=1.0">
-    <title>New Campground</title>
-</head>
-<body>
+<% layout('layouts/boilerplate')%>
 <form action="/campgrounds/<%=camp._id%>?_method=PUT" method="POST">
 <div>
     <label for="title">Title</label>
@@ -20,5 +12,3 @@
 
 </form>
 <a href="/campgrounds/<%=camp._id%>">Back</a>
-</body>
-</html>
