--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<% layout('layouts/boilerplate')%>
    <h1> List of all the camping sites </h1>
    <a href="/campgrounds/new">New Campground</a>
     <%for(let camp of camps){ %>
     <li> <a href="/campgrounds/<%=camp._id%>">  <%=camp.title%>  </a>  <li/>
         <%}%>
-</body>
-</html>
